# agent-kernel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md
agent/: .gitignore  README.md  app.py  build.sh  build_index.sh  config.yaml  pyproject.toml  rag_loader.py  rag_system.py  tool.py
agent/deploy/: Dockerfile  backend.tf  deploy.sh  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
ak-py/: .gitignore  CONFIG.md  README.md  build.sh  bump_version.py  config.yaml  package.sh  publish.sh  pyproject.toml  test.py
ak-py/ak/: README.md  pyproject.toml
ak-py/ak-agents/: README.md  pyproject.toml
ak-py/ak-agents/src/ak_agents/: __init__.py  orchestrator.py
ak-py/ak-agents/src/logic/: implementation.py
ak-py/ak-agents/tests/: orchestrator_agent_test.py
ak-py/ak-aws/: README.md  pyproject.toml
ak-py/ak-aws/src/ak_aws/: __init__.py  aklambda.py
ak-py/ak-common/: README.md  pyproject.toml
ak-py/ak-common/src/common/: __init__.py  utils.py
ak-py/ak-common/tests/: util_test.py
ak-py/ak-core/: README.md  pyproject.toml
ak-py/ak-core/src/ak_core/: __init__.py  agent.py
ak-py/ak-core/src/ak_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ak-py/ak-core/src/core/: agent.py
ak-py/ak-crewai/: README.md  pyproject.toml
ak-py/ak-crewai/src/ak_crewai/: __init__.py  akcrewai.py
ak-py/ak-langgraph/: README.md  pyproject.toml
ak-py/ak-langgraph/src/ak_langgraph/: __init__.py  aklanggraph.py
ak-py/ak-openai/: README.md  pyproject.toml
ak-py/ak-openai/src/ak_openai/: __init__.py  akopenai.py
ak-py/ak/src/ak/: __init__.py  ak.py  akcli.py
ak-py/src/agentkernel/: __init__.py  adk.py  aws.py  azure.py  crewai.py  fbmessenger.py  gcp.py  gmail.py  instagram.py  langgraph.py  livekit.py  mcp.py  messenger.py  openai.py  slack.py  smolagents.py  teams.py  telegram.py  whatsapp.py
ak-py/src/agentkernel/a2a/: a2a.py
ak-py/src/agentkernel/adk/: __init__.py  adk.py
ak-py/src/agentkernel/api/: __init__.py  a2a.py  agent.py  handler.py  http.py  rest_request_handler.py  restapi.py
ak-py/src/agentkernel/auth/: __init__.py  awsauthorizer.py  handler.py
ak-py/src/agentkernel/aws/: __init__.py  aklambda.py
ak-py/src/agentkernel/cli/: __init__.py  ak.py  cli.py
ak-py/src/agentkernel/core/: __init__.py  attachment.py  base.py  builder.py  chat_service.py  config.py  config_yaml_util.py  hooks.py  logger.py  model.py  (+6 more)
ak-py/src/ak/: __init__.py
ak-py/tests/: ak_core_test.py  test_a2a_streaming.py  test_ak_logger.py  test_akagentrunner_stream.py  test_akauthorizer.py  test_akresponsehandler.py  test_api_http.py  test_auth_handler.py  test_autogen_runner.py  test_base.py  test_bump_version.py  test_chat_service_streaming.py  test_cli_tester.py  test_config.py  test_ecs_sqs_consumer_parallel.py  test_error_util.py  test_firestore_database_id.py  test_guardrail.py  test_lambda_router.py  test_module.py  test_openai_runner.py  test_runtime.py  test_serverless_request_handle.py  test_session.py  test_session_cache.py  test_sessions_in_memory.py  test_smolagents_runner.py  test_sqs_handler.py  test_tool.py  test_tool_adk.py  test_tool_builder.py  test_tool_crewai.py  test_tool_integration.py  test_tool_langgraph.py  test_tool_openai.py  test_tool_smolagents.py  test_ws_lambda_stream.py
examples/api/instagram/: README.md  build.sh  config.yaml  pyproject.toml  server.py  server_test.py
examples/api/slack/: README.md  build.sh  config.yaml  pyproject.toml  server.py  server_test.py
examples/api/teams/: README.md  build.sh  config.yaml  pyproject.toml  server.py  server_test.py
examples/api/telegram/: README.md  build.sh  config.yaml  pyproject.toml  server.py  server_adk.py  server_test.py
examples/api/whatsapp/: README.md  build.sh  config.yaml  example_custom_handler.py  pyproject.toml  server.py  server_test.py
examples/aws-containerized/crewai/: .gitignore  README.md  app.py  app_test.py  build.sh  config.yaml  pyproject.toml
examples/aws-containerized/crewai-auth/: README.md  app.py  build.sh  config.yaml  pyproject.toml
examples/aws-containerized/openai-dynamodb/: README.md  app.py  build.sh  config.yaml  pyproject.toml
examples/aws-serverless-langgraph-agent/: README.md  build.sh  lambda.py  pyproject.toml
examples/aws-serverless-langgraph-agent/deploy/: deploy.sh  main.tf
examples/aws-serverless-openai-agents/: README.md  build.sh  lambda.py  pyproject.toml
examples/aws-serverless-openai-agents/deploy/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  variables.tf
examples/aws-serverless/crewai/: README.md  build.sh  config.yaml  lambda.py  lambda_test.py  pyproject.toml
examples/aws-serverless/langgraph/: README.md  build.sh  config.yaml  custom_agent.py  lambda.py  pyproject.toml
examples/aws-serverless/openai/: .gitignore  README.md  build.sh  config.yaml  lambda.py  lambda_test.py  pyproject.toml  test.py
examples/aws-serverless/openai-auth/: .gitignore  README.md  build.sh  config.yaml  lambda_auth.py  lambda_test.py  pyproject.toml
examples/azure-serverless/openai/: README.md  azure_function_test.py  build.sh  config.yaml  function.json  host.json  main.py  pyproject.toml  terraform.tfvars
examples/cli-crewai-agents/: README.md  build.sh  demo.py  pyproject.toml
examples/cli-openai-agents/: .gitignore  README.md  agent.py  build.sh  cli.py  lambda.py  pyproject.toml
examples/cli/adk/: README.md  build.sh  demo.py  demo_test.py  pyproject.toml
examples/travel-manager-agent/: README.md  build.sh  main.py  pyproject.toml
examples/travel-manager-agent/tests/: travel_agent_orchestrator_test.py
examples/travel-manager-agent/travel_manager_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
use-cases/waste-sorting-assistant/: .gitignore  README.md  SPEC.md  agent.py  build.sh  build_aws.sh  config.yaml  demo.py  lambda.py  pyproject.toml  requirements-aws.txt  tool.py
use-cases/waste-sorting-assistant/deploy/: Dockerfile  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+1369 files in other folders)
