[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project]
name = "agentkernel"
version = "0.1.2b5"
description = "Agent Kernel Python Distribution"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Yaala Labs", email = "info@yaalalabs.com" }
]
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
]

[project.optional-dependencies]
crewai = [
    "crewai>=0.150.0"
]
langgraph = [
    "langgraph~=0.6.2",
    "langchain~=0.3.27",
    "langchain_community~=0.3.27",
    "litellm~=1.74.3"
]
cli = [

]
aws = [

]
openai = [
    "openai-agents>=0.2.3"
]
adk = [
    "google-adk>=1.14.1",
    "litellm~=1.74.3"
]
api = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "gunicorn>=23.0.0"
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "pytest-html>=4.1.1",
    "pytest-order>=1.3.0",
    "rapidfuzz>=3.14.1",
]
a2a = [
    "a2a-sdk[http-server]>=0.3.6",
]
mcp = [
    "fastmcp>=2.12.4",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]


[tool.uv]
package = true

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"

# Common tool configurations that apply to all packages
[tool.black]
line-length = 88
target-version = ["py312"]

warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term --cov-report=html --html=report.html"

