[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project]
name = "agentkernel"
version = "0.2.11"
description = "Agent Kernel - Unified AI Agents Runtime"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Yaala Labs", email = "agentkernel@yaalalabs.com" }
]
dependencies = [
    "deprecated>=1.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "singleton-type>=0.0.5",
]

[project.optional-dependencies]
langfuse = [
    "langfuse>=3.9.2",
    "nest-asyncio>=1.6.0",
]
openllmetry = [
    "traceloop-sdk>=0.48.0",
]
crewai = [
    "crewai>=0.150.0",
    "openinference-instrumentation-crewai>=0.1.16",
    "openinference-instrumentation-litellm>=0.1.28",
]
langgraph = [
    "langgraph~=1.0.5",
    "langchain~=1.2.3",
    "langchain_community~=0.4.1",
    "litellm~=1.74.9"
]
cli = [

]
aws = [
    "boto3>=1.41.4",
]
redis = [
    "redis>=7.1.0",
]
openai = [
    "openai-agents>=0.6.5",
    "openinference-instrumentation-openai-agents>=1.4.0",
    "openai-guardrails>=0.2.1",
]
adk = [
    "google-adk>=1.14.1",
    "litellm~=1.74.3",
    "openinference-instrumentation-google-adk>=0.1.6",
]
api = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "gunicorn>=23.0.0"
]
slack = [
    "slack-bolt==1.22.0",
    "httpx>=0.27.0"
]
whatsapp = [
    "httpx>=0.27.0"
]
messenger = [
    "httpx>=0.27.0"
]
instagram = [
    "httpx>=0.27.0"
]
telegram = [
    "httpx>=0.27.0"
]
gmail = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
    "pytest-html>=4.1.1",
    "pytest-order>=1.3.0",
    "rapidfuzz>=3.14.1",
    "ragas>=0.4.1",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "litellm>=1.74.9",
]
a2a = [
    "a2a-sdk[http-server]>=0.3.6",
]
mcp = [
    "fastmcp>=2.12.4",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]


[tool.uv]
package = true

[tool.isort]
profile = "black"
line_length = 150

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 150
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term --cov-report=html --html=report.html"

