[build-system]
requires = [
    "uv_build>=0.8.2,<0.9.0",
]
build-backend = "uv_build"

[project]
name = "ak-agents"
version = "0.1.0"
description = "Agent logic implementation for Agent Kernel"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Yaala Labs", email = "info@yaalalabs.com" },
]
dependencies = [
    "ak_common==0.1.0",
    "ak_core==0.1.0",
]

[project.license]
text = "MIT"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/ak_agents",
]
