[build-system]
requires = [
    "uv_build>=0.8.2,<0.9.0",
]
build-backend = "uv_build"

[project]
name = "ak-aws"
version = "0.1.0"
description = "Agent Kernel support for AWS"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Yaala Labs", email = "hello@yaalalabs.com" },
]
dependencies = [
    "ak==0.1.0",
]

[project.license]
text = "MIT"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ak_aws",
]

[tool.uv]
package = true