[build-system]
requires = [
    "uv_build>=0.8.2,<0.9.0",
]
build-backend = "uv_build"

[project]
name = "ak-common"
version = "0.1.0"
description = "Common library for Agent Kernel"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Yaala Labs", email = "hello@yaalalabs.com" },
]
dependencies = [
    "pydantic>=2.11.7",
]

[project.license]
text = "MIT"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ak_common",
]

[tool.uv]
package = true