[build-system]
requires = [
    "uv_build>=0.8.2,<0.9.0",
]
build-backend = "uv_build"

[project]
name = "ak-crewai"
version = "0.1.0"
description = "Agent Kernel support for CrewAI"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Yaala Labs", email = "hello@yaalalabs.com" },
]
dependencies = [
    "ak",
    "crewai>=0.150.0",
]

[project.license]
text = "MIT"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ak_crewai",
]

[tool.uv]
package = true

[tool.uv.sources]
ak = { workspace = true }
