[build-system]
requires = [
    "uv_build>=0.8.2,<0.9.0",
]
build-backend = "uv_build"

[project]
name = "ak-openai"
version = "0.1.0"
description = "Agent Kernel support for OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Yaala Labs", email = "hello@yaalalabs.com" },
]
dependencies = [
    "ak==0.1.0",
    "openai-agents>=0.2.3",
]

[project.license]
text = "MIT"

[tool.hatch.build.targets.wheel]
packages = [
    "src/ak_openai",
]

[tool.uv]
package = true

[tool.uv.sources]
ak = { workspace = true }
