[project]
name = "aws-lambda-openai-agents"
version = "0.1.0"
description = "Demo of OpenAI Agents SDK based agents running in Agent Kernel with AWS Lambda"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ak[langgraph,aws]>=0.1.0",
    "langchain-litellm>=0.2.2",
    "langchain-openai>=0.3.28",
    "langgraph-supervisor>=0.0.29",
    "openai>=1.99.1",
]

[tool.uv]
find-links = ["../../ak-py/dist"]
package = false

[uv.pip]
extra-index-url = ["https://pypi.org/simple/"]
find-links = ["../../ak-py/dist"]
