
[project]
name = "cli-crewai-agents"
version = "0.1.0"
description = "Demo of CrewAI based agents running in Agent Kernel with a CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ak>=0.1.0",
    "ak-crewai>=0.1.0",
]

[tool.uv]
find-links = ["../../ak-py/dist"]
package = false

[uv.pip]
extra-index-url = ["https://pypi.org/simple/"]
find-links = ["../../ak-py/dist"]
