
[project]
name = "cli-openai-agents"
version = "0.1.0"
description = "Demo of OpenAI Agents SDK based agents running in Agent Kernel with a CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ak[openai]>=0.1.0",
]

[tool.uv]
find-links = ["../../ak-py/dist"]
package = false

[uv.pip]
extra-index-url = ["https://pypi.org/simple/"]
find-links = ["../../ak-py/dist"]
