[project]
name = "waste-sorting-assistant"
version = "0.1.0"
description = "Agent Kernel CLI agent for local recycling and disposal guidance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkernel[cli,openai,aws]>=0.6.0",
]

[dependency-groups]
dev = [
    "agentkernel[test]>=0.6.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
target-version = ["py312"]
