[project]
name = "api-instagram"
version = "0.1.0"
description = "Instagram Business API integration example for Agent Kernel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkernel[api,openai,instagram]>=0.3.3"
]

[dependency-groups]
dev = [
    "agentkernel[test]>=0.3.3",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
package = false

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 120
target-version = ["py312"]

