[project]
name = "api-slack"
version = "0.1.0"
description = "Demo of OpenAI SDK agent running with a Slack integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkernel[api,openai,slack]>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "agentkernel[test]>=0.2.0",
]

[tool.uv]
package = false