[project]
name = "api-slack"
version = "0.1.0"
description = "Demo of OpenAI SDK agent running with a Slack integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkernel[api,openai,slack]>=0.2.3",
    "aiohttp>=3.13.2",
]

[dependency-groups]
dev = [
    "agentkernel[test]>=0.2.3",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
package = false

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 120
target-version = ["py312"]
