[project]
name = "telegram-agent-kernel-example"
version = "0.1.0"
description = "Telegram Bot integration example using Agent Kernel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkernel[api,adk,telegram]>=0.2.11",
]

[dependency-groups]
dev = [
    "agentkernel[test]>=0.2.11",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
