[project]
name = "whatsapp-example"
version = "0.1.0"
description = "WhatsApp integration example for Agent Kernel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentkernel[openai]>=0.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
