[project]
name = "api-whatsapp"
version = "0.1.0"
description = "WhatsApp integration example for Agent Kernel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkernel[api,openai,whatsapp]>=0.2.12"
]

[dependency-groups]
dev = [
    "agentkernel[test]>=0.2.12",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
package = false

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 120
target-version = ["py312"]