[project]
name = "aws-containerized-crewai-auth"
version = "0.1.0"
description = "Demo of CrewAI based agents with authentication running in Agent Kernel on AWS ECS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkernel[crewai,api,redis,auth]>=0.5.1",
    "crewai==0.165.1"
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
package = false

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 120
target-version = ["py312"]
