
[project]
name = "aws-serverless-crewai"
version = "0.1.0"
description = "Demo of CrewAI based agents running in Agent Kernel on AWS Lambda"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ak[crewai,aws]>=0.1.0"
]

[tool.uv]
find-links = ["../../../ak-py/dist"]
package = false

[uv.pip]
extra-index-url = ["https://pypi.org/simple/"]
find-links = ["../../../ak-py/dist"]
