[project]
name = "aws-serverless-langgraph"
version = "0.1.0"
description = "Demo of LangGraph based agents running in Agent Kernel on AWS Lambda"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agentkernel[langgraph,redis]>=0.3.3",
    "langchain-litellm>=0.2.2",
    "langchain-openai>=0.3.28",
    "langgraph>=1.0.5,<1.1",
    "langgraph-checkpoint>=2.1.0,<5",
    "langgraph-prebuilt>=1.0.2,<1.1",
    "langgraph-sdk>=0.3.0,<0.4",
    "langgraph-supervisor>=0.0.29",
    "openai>=1.99.1",
]

[dependency-groups]
dev = [
    "agentkernel[test]>=0.2.11",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
package = false

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 120
target-version = ["py312"]