[project]
name = "cli-adk"
version = "0.1.0"
description = "Demo of Google ADK based agents running in Agent Kernel with a CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentkernel[cli,adk]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "agentkernel[test]>=0.2.2",
]

[tool.uv]
package = false
